# ZipCache

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  zipcache.c  zipcache.h
DRAM-tier/: 2025-09-04_mixed_workload_compression_benchmark.md  BUILD.md  CMakeLists.txt
DRAM-tier/cmake/: bplustreeConfig.cmake.in
DRAM-tier/examples/: CMakeLists.txt  compressed_performance_test.c  compression_benchmark.c  focused_compression_benchmark.c  lazy_flush_test.c  mixed_workload_compression_benchmark.c  samba_chunk_btree_test.c  samba_chunk_kv_test.c  samba_zip_compression_benchmark.c  silesia_compression_test.c  simple_compressed_test.c  synthetic_compression_benchmark.c
DRAM-tier/legacy/: bplustree.c  bplustree.h  btree.cc  btree.h
DRAM-tier/lib/: CMakeLists.txt  bplustree.c  bplustree.h  bplustree_compressed.c  bplustree_compressed.h  bplustree_threadsafe.c  bplustree_threadsafe.h
DRAM-tier/tests/: CMakeLists.txt  README.md  compressed_crud_fuzz.c  compressed_dcperf_workload.c  compressed_lz4_smoke.c  compressed_qpl_smoke.c  compressed_tail_latency.c  qpl_lz4_block_bench.c  qpl_lz4_block_sizes.c  qpl_lz4_kv_bench.c  qpl_lz4_kv_bench_mt.cpp  qpl_lz4_mixed_workload.cpp  run_kv_bench.sh  run_tail_latency_sizes.sh  tail_latency_analyze.py  test_compression_concurrency.c
DRAM-tier/tests/btree/: CONCURRENCY_SCALING_PLAN.md  IAA_EVALUATION.md  README.md  compressed_crud_fuzz.c  compressed_dcperf_workload.c  compressed_mixed_concurrency.c  compressed_qpl_smoke.c  compressed_split_payload_stats.c  compressed_synthetic_test.c  compressed_tail_latency.c  compressed_test_utils.h  compressed_throughput_bench.c  compressed_zlib_accel_smoke.c  run_iaa_eval.sh  run_scaling_sweep.sh  test_compression_concurrency.c
DRAM-tier/tests/btree/results/: main_32t_bg_on_latest.txt  main_32t_latest.txt
DRAM-tier/tests/btree/results/20260414T151440Z/: summary.tsv
DRAM-tier/tests/btree/results/20260414T152342Z/: summary.tsv
DRAM-tier/tests/btree/results/20260414T152701Z/: summary.tsv
DRAM-tier/tests/btree/results/20260415T185910Z/: summary.tsv
DRAM-tier/tests/btree/results/20260415T190717Z/: summary.tsv
DRAM-tier/tests/btree/results/20260415T191646Z/: summary.tsv
DRAM-tier/tests/btree/results/20260415T193556Z/: summary.tsv
DRAM-tier/tests/btree/results/api_opt_smoke/20260417T210118Z/: summary.tsv
DRAM-tier/tests/btree/results/bg_compare_off/20260417T170847Z/: software_fixed_tail_latency.csv  summary.tsv  tail_latency_summary.tsv
DRAM-tier/tests/btree/results/bg_compare_on/20260417T170919Z/: software_fixed_tail_latency.csv  summary.tsv  tail_latency_summary.tsv
DRAM-tier/tests/btree/results/cpu_aware_main/20260418T021637Z/: software_fixed_lz4_read_only_t32_lb512_bg0_all_w75.cpu  software_fixed_lz4_read_only_t8_lb512_bg0_all_w75.cpu  software_fixed_lz4_read_write_2_8_t32_lb512_bg0_all_w75.cpu  software_fixed_lz4_read_write_2_8_t8_lb512_bg0_all_w75.cpu  software_fixed_lz4_read_write_5_5_t32_lb512_bg0_all_w75.cpu  software_fixed_lz4_read_write_5_5_t8_lb512_bg0_all_w75.cpu  software_fixed_lz4_read_write_8_2_t32_lb512_bg0_all_w75.cpu  software_fixed_lz4_read_write_8_2_t8_lb512_bg0_all_w75.cpu  software_fixed_lz4_write_only_t32_lb512_bg0_all_w75.cpu  software_fixed_lz4_write_only_t8_lb512_bg0_all_w75.cpu  software_fixed_qpl_read_only_t32_lb512_bg0_all_w75.cpu  software_fixed_qpl_read_only_t8_lb512_bg0_all_w75.cpu  software_fixed_qpl_read_write_2_8_t32_lb512_bg0_all_w75.cpu  software_fixed_qpl_read_write_2_8_t8_lb512_bg0_all_w75.cpu  software_fixed_qpl_read_write_5_5_t32_lb512_bg0_all_w75.cpu  software_fixed_qpl_read_write_5_5_t8_lb512_bg0_all_w75.cpu  software_fixed_qpl_read_write_8_2_t32_lb512_bg0_all_w75.cpu  software_fixed_qpl_read_write_8_2_t8_lb512_bg0_all_w75.cpu  software_fixed_qpl_write_only_t32_lb512_bg0_all_w75.cpu  software_fixed_qpl_write_only_t8_lb512_bg0_all_w75.cpu  software_fixed_zlib_accel_read_only_t32_lb512_bg0_all_w75.cpu  software_fixed_zlib_accel_read_only_t8_lb512_bg0_all_w75.cpu  software_fixed_zlib_accel_read_write_2_8_t32_lb512_bg0_all_w75.cpu  software_fixed_zlib_accel_read_write_2_8_t8_lb512_bg0_all_w75.cpu  software_fixed_zlib_accel_read_write_5_5_t32_lb512_bg0_all_w75.cpu  software_fixed_zlib_accel_read_write_5_5_t8_lb512_bg0_all_w75.cpu  software_fixed_zlib_accel_read_write_8_2_t32_lb512_bg0_all_w75.cpu  software_fixed_zlib_accel_read_write_8_2_t8_lb512_bg0_all_w75.cpu  software_fixed_zlib_accel_write_only_t32_lb512_bg0_all_w75.cpu  software_fixed_zlib_accel_write_only_t8_lb512_bg0_all_w75.cpu  summary.tsv
DRAM-tier/tests/btree/results/cpu_metrics_quick/20260417T212756Z/: software_fixed_lz4_read_only_t1_lb512_bg0_all_w75.cpu  software_fixed_lz4_read_write_2_8_t1_lb512_bg0_all_w75.cpu  software_fixed_lz4_read_write_5_5_t1_lb512_bg0_all_w75.cpu  software_fixed_lz4_read_write_8_2_t1_lb512_bg0_all_w75.cpu  software_fixed_lz4_write_only_t1_lb512_bg0_all_w75.cpu  summary.tsv
DRAM-tier/tests/btree/results/cpu_metrics_smoke/20260417T212632Z/: software_fixed_lz4_read_only_t1_lb512_bg0_all_w75.cpu  software_fixed_lz4_read_write_2_8_t1_lb512_bg0_all_w75.cpu  software_fixed_lz4_read_write_5_5_t1_lb512_bg0_all_w75.cpu  software_fixed_lz4_read_write_8_2_t1_lb512_bg0_all_w75.cpu  software_fixed_lz4_write_only_t1_lb512_bg0_all_w75.cpu  summary.tsv  (+11 more)
DRAM-tier/tests/codec/: README.md  clock_resolution_test.cpp  decompress_fail_test.cpp  qpl_lz4_block_bench.c  qpl_lz4_kv_bench_async.cpp  qpl_lz4_kv_bench_mt.cpp  qpl_lz4_mixed_workload.cpp
DRAM-tier/tests/legacy/: README.md  benchmark_legacy_compression.c  minimal_test.c  simple_test_legacy.c  test_legacy_simple_compression.c
LO-tier/: CMakeLists.txt  README.md
LO-tier/examples/: btlo_example.c
LO-tier/lib/: bplustree_lo.c  bplustree_lo.h
LO-tier/tests/: btlo_test.c  splitting_test.c
SSD-tier/: CMakeLists.txt  README_SUPER_LEAF_SPLITTING.md
SSD-tier/examples/: hybrid_btree_example.c
SSD-tier/lib/: bplustree.c  bplustree.h
SSD-tier/tests/: hashed_io_test.c  hybrid_btree_test.c  simple_split_test  simple_split_test.c  super_leaf_split_test  super_leaf_split_test.c  super_leaf_test.c  zero_padding_test.c
(+35 files in other folders)
